# spark-mcp

./: .gitignore  Dockerfile  README.md  api-discovery.md  find_location.py  pyproject.toml
.github/workflows/: ci.yml
openclaw-skill/: SKILL.md  spark.py
src/spark_mcp/: __main__.py  client.py  models.py  server.py
