[project]
name = "spark-mcp"
version = "0.1.0"
description = "MCP server for Spark Membership platform — martial arts studio CRM"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
